Updating z-indexes to fix nav z-index error (#651)

--- a/apps/recent-activity/src/base-scss/mat-ui-overrides.scss
+++ b/apps/recent-activity/src/base-scss/mat-ui-overrides.scss
@@ -499,3 +499,7 @@ cirrus-video-player .cirrus-video-player > div {
   position: initial !important;
   padding: 0 !important;
 }
+
+apx-chart .apexcharts-toolbar {
+  z-index: 4;
+}
